# healthshield-ai

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pytest.ini  run_tests.py  setup.cfg
.github/workflows/: ci-cd.yml  ci.yml
backend/: requirements-local.txt  requirements.txt
backend/apps/: __init__.py
backend/apps/analytics/: __init__.py  _calculators_healthmetrics_fixed.py  admin.py  apps.py  calculators.py  models.py  serializers.py  urls.py  views.py
backend/apps/authentication/: __init__.py  admin.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/dashboard/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/etl/: __init__.py  admin.py  apps.py  extractors.py  loaders.py  models.py  pipeline.py  quality.py  serializers.py  simulation.py  transformers.py  urls.py  views.py
backend/apps/ml/: __init__.py  admin.py  apps.py  models.py  predictor.py  serializers.py  trainer.py  urls.py  views.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/data/: datos.csv
docker/: Dockerfile  entrypoint.sh  nginx.conf
docs/: api.md  architecture.md  erd.sql  overview.md  roadmap.md
frontend/templates/: base.html
scripts/: README.md  README_ETL.txt
scripts/etl/: run_etl.py
scripts/ml/: train_model.py
scripts/test/: run_pytest.py
tests/: conftest.py
tests/unit/: test_analytics.py  test_auth_middleware.py  test_auth_models.py  test_dashboard.py  test_ml.py  test_pipeline.py  test_quality.py  test_simulation.py  test_transformers.py
(+29 files in other folders)
