[metadata]
name = healthshield-ai
version = 1.0.0

[options]
packages = find:
python_requires = >=3.12
install_requires =
    Django>=5.0.6
    pandas>=2.2.2
    scikit-learn>=1.5.0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,migrations
ignore = E501,W503

[isort]
profile = django
line_length = 120
skip = migrations,tests